sandc/test/fixtures/astRegression/shouldSucceed/productions/mtrPseudex/RepeatingListFillPseudex.sand
pub class RepeatingListFillPseudex {
    foo() {
        let a = +["foo"; n];
    }
}