sandc/test/fixtures/astRegression/shouldFail/productions/literalExpression/IllegalRepeatingArrayRepetitionQuantity.sand
pub class IllegalRepeatingArrayRepetitionQuantity {
    foo() {
        ["foo"; static n]
    }
}